Fix typo and text formatting in Pipeline_01

--- a/examples/Pipeline_01_Site_Effects_Adjustments.ipynb
+++ b/examples/Pipeline_01_Site_Effects_Adjustments.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook demonstrates the pipeline of modifing a ground motion to incorporate site effects (a.k.a., site response)"
+    "### This notebook demonstrates the pipeline of modifying a ground motion to incorporate site effects (a.k.a., site response)"
    ]
   },
   {
@@ -14,9 +14,9 @@
     "The users need to know the following information:\n",
     "\n",
     "- Input ground motion (i.e., motion to be adjusted)\n",
-    "- Vs profile for adjusting the input motion (_this is optional; if not known, the input ground motion is assumed to be on a rock site whose surface $V_S$ = 1,000 m/s_)\n",
+    "- Vs profile for adjusting the input motion (this is optional; if not known, the input ground motion is assumed to be on a rock site whose surface $V_S$ = 1,000 m/s)\n",
     "- The $V_{S30}$ of the site of interest\n",
-    "- The $z_{1}$ (basin depth) of the site of interest (_this is optional; if not known, it will be inferred from $V_{S30}$)"
+    "- The $z_{1}$ (basin depth) of the site of interest (this is optional; if not known, it will be inferred from $V_{S30}$)"
    ]
   },
   {
@@ -47,19 +47,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(For more information of `Ground_Motion` objects, see [documentations](https://pyseismosoil.readthedocs.io/en/stable/api_docs/class_ground_motion.html) and [examples](./Demo_01_Ground_Motion.ipynb).)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "gm = Ground_Motion('../PySeismoSoil/tests/files/sample_accel.txt', unit='cm/s/s', motion_type='accel')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(For more information of `Ground_Motion` objects, see [documentations](https://pyseismosoil.readthedocs.io/en/stable/api_docs/class_ground_motion.html) and [examples](./Demo_01_Ground_Motion.ipynb).)"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1. Adjust by (foward) convolution"
+    "### 2.1. Adjust by (forward) convolution"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
