--- a/examples/Demo_06_SVM.ipynb
+++ b/examples/Demo_06_SVM.ipynb
@@ -540,19 +540,10 @@
    "outputs": [],
    "source": [
     "start_lat = 33.8\n",
-    "#start_lon = -118.4\n",
     "end_lat = 34.0\n",
-    "#end_lon = -118.0\n",
     "\n",
     "n_profile = 500  # number of 1D Vs profile along the 2D cross section\n",
-    "lat_array = np.linspace(start_lat, end_lat, n_profile)\n",
-    "#lon_array = np.linspace(start_lon, end_lon, n_profile)\n",
-    "#d_lat = lat_array[2] - lat_array[1]\n",
-    "#d_lon = lon_array[2] - lon_array[1]\n",
-    "#dx = d_lon * 111.0  # unit: km (1 degree is approximately 111 km)\n",
-    "#dy = d_lat * 111.0  # unit: km\n",
-    "#dl = np.sqrt(dx**2.0 + dy**2.0)\n",
-    "#l_array = np.arange(0, n_profile * dl + dl, dl)"
+    "lat_array = np.linspace(start_lat, end_lat, n_profile)"
    ]
   },
   {
@@ -942,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
