Update examples to include instructions to save simulation results

--- a/examples/Pipeline_03_Linear_Method.ipynb
+++ b/examples/Pipeline_03_Linear_Method.ipynb
@@ -210,7 +210,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`sim_results_1` and `sim_results_2` are objects of `Simulation_Results` class. We can save the contents of `Simulation_Results` objects as figures (`.png`) and as text files (`.txt`). For more information, see the [documentation](https://pyseismosoil.readthedocs.io/en/stable/api_docs/class_simulation_results.html) of this class."
+    "`sim_results_1` and `sim_results_2` are objects of `Simulation_Results` class. You can save these simulation results to the hard drive like this:\n",
+    "\n",
+    "```python\n",
+    ">>> sim_results_1.to_txt()\n",
+    "```\n",
+    "\n",
+    "To also save the figures (input/output ground motion, maximum accel/veloc/displ/strain/stress profiles), use the `plot()` method:\n",
+    "\n",
+    "```python\n",
+    ">>> sim_results_2.plot(dpi=200, save_fig=True)\n",
+    "```\n",
+    "\n",
+    "For more information about the `Simulation_Results` class, see its [documentation](https://pyseismosoil.readthedocs.io/en/stable/api_docs/class_simulation_results.html)."
    ]
   },
   {
