--- a/examples/Pipeline_05_Nonlinear_Method.ipynb
+++ b/examples/Pipeline_05_Nonlinear_Method.ipynb
@@ -258,7 +258,9 @@
     "\n",
     "```python\n",
     ">>> sim_results.plot(dpi=200, save_fig=True)\n",
-    "```"
+    "```\n",
+    "\n",
+    "For more information about the `Simulation_Results` class, see its [documentation](https://pyseismosoil.readthedocs.io/en/stable/api_docs/class_simulation_results.html)."
    ]
   },
   {
