Use log10 to calculate rho from Vs (v0.5.0)

--- a/examples/Pipeline_06_Batch_Simulation.ipynb
+++ b/examples/Pipeline_06_Batch_Simulation.ipynb
@@ -34,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accel_in = Ground_Motion('../PySeismoSoil/tests/files/sample_accel.txt', unit='gal')\n",
-    "profile_1 = Vs_Profile('../PySeismoSoil/tests/files/profile_FKSH14.txt')\n",
-    "profile_2 = Vs_Profile('../PySeismoSoil/tests/files/profile_P001.txt')"
+    "accel_in = Ground_Motion('../tests/files/sample_accel.txt', unit='gal')\n",
+    "profile_1 = Vs_Profile('../tests/files/profile_FKSH14.txt')\n",
+    "profile_2 = Vs_Profile('../tests/files/profile_P001.txt')"
    ]
   },
   {
@@ -111,8 +111,8 @@
     {
      "data": {
       "text/plain": [
-       "[<PySeismoSoil.class_simulation_results.Simulation_Results at 0x174f083d0>,\n",
-       " <PySeismoSoil.class_simulation_results.Simulation_Results at 0x174f08520>]"
+       "[<PySeismoSoil.class_simulation_results.Simulation_Results at 0x13f118640>,\n",
+       " <PySeismoSoil.class_simulation_results.Simulation_Results at 0x13f1184f0>]"
       ]
      },
      "execution_count": 6,
@@ -137,8 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curves_1 = Multiple_GGmax_Damping_Curves(data='../PySeismoSoil/tests/files/curve_FKSH14.txt')\n",
-    "curves_2 = Multiple_GGmax_Damping_Curves(data='../PySeismoSoil/tests/files/curve_P001.txt')"
+    "curves_1 = Multiple_GGmax_Damping_Curves(data='../tests/files/curve_FKSH14.txt')\n",
+    "curves_2 = Multiple_GGmax_Damping_Curves(data='../tests/files/curve_P001.txt')"
    ]
   },
   {
@@ -206,8 +206,8 @@
     {
      "data": {
       "text/plain": [
-       "[<PySeismoSoil.class_simulation_results.Simulation_Results at 0x1762b7310>,\n",
-       " <PySeismoSoil.class_simulation_results.Simulation_Results at 0x1786b7310>]"
+       "[<PySeismoSoil.class_simulation_results.Simulation_Results at 0x13fc69250>,\n",
+       " <PySeismoSoil.class_simulation_results.Simulation_Results at 0x13fc69c40>]"
       ]
      },
      "execution_count": 11,
@@ -232,8 +232,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hh_g_param_1 = HH_Param_Multi_Layer('../PySeismoSoil/tests/files/HH_G_FKSH14.txt')\n",
-    "hh_g_param_2 = HH_Param_Multi_Layer('../PySeismoSoil/tests/files/HH_G_P001.txt')"
+    "hh_g_param_1 = HH_Param_Multi_Layer('../tests/files/HH_G_FKSH14.txt')\n",
+    "hh_g_param_2 = HH_Param_Multi_Layer('../tests/files/HH_G_P001.txt')"
    ]
   },
   {
@@ -242,8 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hh_x_param_1 = HH_Param_Multi_Layer('../PySeismoSoil/tests/files/HH_X_FKSH14.txt')\n",
-    "hh_x_param_2 = HH_Param_Multi_Layer('../PySeismoSoil/tests/files/HH_X_P001.txt')"
+    "hh_x_param_1 = HH_Param_Multi_Layer('../tests/files/HH_X_FKSH14.txt')\n",
+    "hh_x_param_2 = HH_Param_Multi_Layer('../tests/files/HH_X_P001.txt')"
    ]
   },
   {
@@ -284,12 +284,12 @@
      "output_type": "stream",
      "text": [
       "Parallel computing in progress... |---------------- Calculating --------------------|\n",
-      "|||---------------- Calculating --------------------|\n",
-      "|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| \n",
+      "||---------------- Calculating --------------------|\n",
+      "||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| \n",
       " \n",
       "Calculation finished. Writing results to disk...\n",
       " \n",
-      "|||||||||||||||||| \n",
+      "|||||||||||||||| \n",
       " \n",
       "Calculation finished. Writing results to disk...\n",
       " \n",
@@ -297,11 +297,11 @@
       "Nonlinear simulation running...\n",
       "Simulation finished. Now post processing.\n",
       "Done.\n",
-      "`sim_dir` (./batch_sim_2022-07-04_02-04-28/1) removed.\n",
+      "`sim_dir` (./batch_sim_2023-01-08_16-37-35/1) removed.\n",
       "Nonlinear simulation running...\n",
       "Simulation finished. Now post processing.\n",
       "Done.\n",
-      "`sim_dir` (./batch_sim_2022-07-04_02-04-28/0) removed.\n"
+      "`sim_dir` (./batch_sim_2023-01-08_16-37-35/0) removed.\n"
      ]
     }
    ],
@@ -319,8 +319,8 @@
     {
      "data": {
       "text/plain": [
-       "[<PySeismoSoil.class_simulation_results.Simulation_Results at 0x176311fd0>,\n",
-       " <PySeismoSoil.class_simulation_results.Simulation_Results at 0x176311550>]"
+       "[<PySeismoSoil.class_simulation_results.Simulation_Results at 0x13fcd4df0>,\n",
+       " <PySeismoSoil.class_simulation_results.Simulation_Results at 0x13fcd4a00>]"
       ]
      },
      "execution_count": 17,
