Auto-format notebooks

--- a/examples/Demo_01_Ground_Motion.ipynb
+++ b/examples/Demo_01_Ground_Motion.ipynb
@@ -54,7 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7], [1, 1, 2, 3, -1, -2, 0]]).T"
+    "data = np.array(\n",
+    "    [[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7], [1, 1, 2, 3, -1, -2, 0]]\n",
+    ").T"
    ]
   },
   {
@@ -181,7 +183,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ground_motion = Ground_Motion('../tests/files/sample_accel.txt', unit='gal', sep='\\t')"
+    "ground_motion = Ground_Motion(\n",
+    "    '../tests/files/sample_accel.txt', unit='gal', sep='\\t'\n",
+    ")"
    ]
   },
   {
@@ -861,7 +865,9 @@
     }
    ],
    "source": [
-    "truncated = ground_motion.truncate([0.00001, 0.99999], arias=True, show_fig=True)"
+    "truncated = ground_motion.truncate(\n",
+    "    [0.00001, 0.99999], arias=True, show_fig=True\n",
+    ")"
    ]
   },
   {
@@ -1019,7 +1025,9 @@
     }
    ],
    "source": [
-    "amplified_motion = ground_motion.amplify_by_tf(trans_func_rock_outcrop, show_fig=True)"
+    "amplified_motion = ground_motion.amplify_by_tf(\n",
+    "    trans_func_rock_outcrop, show_fig=True\n",
+    ")"
    ]
   },
   {
@@ -1093,7 +1101,9 @@
     }
    ],
    "source": [
-    "rock_outcrop_motion = ground_motion.deconvolve(vs_profile, boundary='elastic', show_fig=True)"
+    "rock_outcrop_motion = ground_motion.deconvolve(\n",
+    "    vs_profile, boundary='elastic', show_fig=True\n",
+    ")"
    ]
   },
   {
@@ -1115,7 +1125,9 @@
     }
    ],
    "source": [
-    "borehole_motion = ground_motion.deconvolve(vs_profile, boundary='rigid', show_fig=True)"
+    "borehole_motion = ground_motion.deconvolve(\n",
+    "    vs_profile, boundary='rigid', show_fig=True\n",
+    ")"
    ]
   },
   {
@@ -1145,12 +1157,14 @@
    ],
    "source": [
     "gm_1 = Ground_Motion('../tests/files/sample_accel.txt', unit='gal')\n",
-    "gm_2 = Ground_Motion('../tests/files/Accel_02_weak_motion_(unit_gal).txt', unit='gal')\n",
+    "gm_2 = Ground_Motion(\n",
+    "    '../tests/files/Accel_02_weak_motion_(unit_gal).txt', unit='gal'\n",
+    ")\n",
     "gm_1.compare(\n",
-    "    gm_2, \n",
-    "    this_ground_motion_as_input=False, \n",
+    "    gm_2,\n",
+    "    this_ground_motion_as_input=False,\n",
     "    smooth=True,\n",
-    "    input_accel_label='gm_2', \n",
+    "    input_accel_label='gm_2',\n",
     "    output_accel_label='gm_1',\n",
     ");"
    ]
