--- a/examples/Demo_02_Vs_Profile.ipynb
+++ b/examples/Demo_02_Vs_Profile.ipynb
@@ -774,7 +774,9 @@
     }
    ],
    "source": [
-    "queried = vs_profile.query_Vs_at_depth(np.array([0, 30, 60, 90, 120, 150]), as_profile=True)\n",
+    "queried = vs_profile.query_Vs_at_depth(\n",
+    "    np.array([0, 30, 60, 90, 120, 150]), as_profile=True\n",
+    ")\n",
     "queried.plot();"
    ]
   },
@@ -834,7 +836,9 @@
     }
    ],
    "source": [
-    "queried = vs_profile.query_Vs_given_thk(np.array([20, 20, 20, 25, 25]), as_profile=True)\n",
+    "queried = vs_profile.query_Vs_given_thk(\n",
+    "    np.array([20, 20, 20, 25, 25]), as_profile=True\n",
+    ")\n",
     "queried.plot();"
    ]
   },
