--- a/examples/Demo_03_Frequency_Spectrum.ipynb
+++ b/examples/Demo_03_Frequency_Spectrum.ipynb
@@ -71,7 +71,7 @@
     "df = 0.01  # frequency resolution (unit: Hz)\n",
     "n_pts = 5000\n",
     "freq = np.linspace(df, n_pts * df, num=n_pts)\n",
-    "spect = freq ** 2.0"
+    "spect = freq**2.0"
    ]
   },
   {
@@ -228,8 +228,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs_intp_1 = Frequency_Spectrum(spect, df=df, interpolate=True, fmin=0.1, fmax=30, n_pts=20, log_scale=True)\n",
-    "fs_intp_2 = Frequency_Spectrum(spect, df=df, interpolate=True, fmin=5.0, fmax=25, n_pts=15, log_scale=False)"
+    "fs_intp_1 = Frequency_Spectrum(\n",
+    "    spect, df=df, interpolate=True, fmin=0.1, fmax=30, n_pts=20, log_scale=True\n",
+    ")\n",
+    "fs_intp_2 = Frequency_Spectrum(\n",
+    "    spect,\n",
+    "    df=df,\n",
+    "    interpolate=True,\n",
+    "    fmin=5.0,\n",
+    "    fmax=25,\n",
+    "    n_pts=15,\n",
+    "    log_scale=False,\n",
+    ")"
    ]
   },
   {
@@ -258,7 +268,7 @@
     }
    ],
    "source": [
-    "fig, ax = fs_intp_1.plot(logx=False, marker='o', alpha=0.6);\n",
+    "fig, ax = fs_intp_1.plot(logx=False, marker='o', alpha=0.6)\n",
     "fs_intp_2.plot(fig=fig, ax=ax, logx=False, marker='^', alpha=0.6);"
    ]
   },
