--- a/examples/Demo_04_Curves.ipynb
+++ b/examples/Demo_04_Curves.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "strain = np.geomspace(1e-2, 10, num=20)\n",
-    "y = strain ** 2\n",
+    "y = strain**2\n",
     "y_ = np.flipud(y) / np.max(y)\n",
     "fictitious_GGmax_data = np.column_stack((strain, y_))"
    ]
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "strain = np.geomspace(1e-2, 10, num=20)\n",
-    "y = strain ** 2\n",
+    "y = strain**2\n",
     "fictitious_damping_data = np.column_stack((strain, y))"
    ]
   },
@@ -383,7 +383,7 @@
    "outputs": [],
    "source": [
     "strain = np.geomspace(1e-2, 10, num=20)\n",
-    "y = strain ** 2\n",
+    "y = strain**2\n",
     "fictitious_stress_data = np.column_stack((strain, y))"
    ]
   },
@@ -482,9 +482,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curve1 = Damping_Curve(np.column_stack((strain, strain ** 1.1)))\n",
-    "curve2 = Damping_Curve(np.column_stack((strain, strain ** 1.4)))\n",
-    "curve3 = Damping_Curve(np.column_stack((strain, strain ** 1.7)))\n",
+    "curve1 = Damping_Curve(np.column_stack((strain, strain**1.1)))\n",
+    "curve2 = Damping_Curve(np.column_stack((strain, strain**1.4)))\n",
+    "curve3 = Damping_Curve(np.column_stack((strain, strain**1.7)))\n",
     "\n",
     "curve_list = []\n",
     "curve_list.append(curve1)\n",
@@ -607,7 +607,7 @@
     }
    ],
    "source": [
-    "Damping_Curve(np.column_stack((strain, strain ** 1.7))) in mdc  # \"`in`\" checks for object ID, not object value"
+    "Damping_Curve(np.column_stack((strain, strain**1.7))) in mdc  # \"`in`\" checks for object ID, not object value"
    ]
   },
   {
@@ -629,7 +629,7 @@
     }
    ],
    "source": [
-    "data4 = np.column_stack((strain, strain ** 2.0))\n",
+    "data4 = np.column_stack((strain, strain**2.0))\n",
     "mdc.append(Damping_Curve(data4))\n",
     "mdc.plot(title='Length of object: %d' % len(mdc));"
    ]
@@ -713,7 +713,7 @@
     }
    ],
    "source": [
-    "mdc[0] = Damping_Curve(np.column_stack((strain, strain ** 1.2 + 5)))\n",
+    "mdc[0] = Damping_Curve(np.column_stack((strain, strain**1.2 + 5)))\n",
     "mdc.plot(title='Length of object: %d' % mdc.n_layer);"
    ]
   },
@@ -991,7 +991,7 @@
     }
    ],
    "source": [
-    "GGmax_curve_matrix = mgc.get_curve_matrix(damping_filler_value=-999);\n",
+    "GGmax_curve_matrix = mgc.get_curve_matrix(damping_filler_value=-999)\n",
     "GGmax_curve_matrix[:10, :8]"
    ]
   },
@@ -1093,7 +1093,7 @@
    ],
    "source": [
     "mgc__, mdc__ = mgdc.get_MGC_MDC_objects()\n",
-    "mgc__.plot();\n",
+    "mgc__.plot()\n",
     "mdc__.plot();"
    ]
   },
