--- a/examples/Demo_05_Parameters.ipynb
+++ b/examples/Demo_05_Parameters.ipynb
@@ -38,7 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PySeismoSoil.class_parameters import HH_Param, MKZ_Param, HH_Param_Multi_Layer, MKZ_Param_Multi_Layer"
+    "from PySeismoSoil.class_parameters import (\n",
+    "    HH_Param,\n",
+    "    MKZ_Param,\n",
+    "    HH_Param_Multi_Layer,\n",
+    "    MKZ_Param_Multi_Layer,\n",
+    ")"
    ]
   },
   {
@@ -61,7 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hh_param = HH_Param(dict(gamma_t=1, a=2, gamma_ref=3, beta=4, s=5, Gmax=6, mu=7, Tmax=8, d=9))"
+    "hh_param = HH_Param(\n",
+    "    dict(gamma_t=1, a=2, gamma_ref=3, beta=4, s=5, Gmax=6, mu=7, Tmax=8, d=9)\n",
+    ")"
    ]
   },
   {
@@ -334,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkz_param = MKZ_Param(dict(gamma_ref=3, beta=4, s=5,Gmax=6))"
+    "mkz_param = MKZ_Param(dict(gamma_ref=3, beta=4, s=5, Gmax=6))"
    ]
   },
   {
