--- a/examples/Demo_06_SVM.ipynb
+++ b/examples/Demo_06_SVM.ipynb
@@ -540,7 +540,9 @@
     }
    ],
    "source": [
-    "svm_0.get_randomized_profile(seed=12, show_fig=True, vs30_z1_compliance=True, verbose=True);"
+    "svm_0.get_randomized_profile(\n",
+    "    seed=12, show_fig=True, vs30_z1_compliance=True, verbose=True\n",
+    ");"
    ]
   },
   {
@@ -652,7 +654,7 @@
    "source": [
     "n_depth = 1200  # number of soil layers\n",
     "fixed_thickness = 1.0  # fixed layer thickness\n",
-    "z_total = fixed_thickness * n_depth # total depth of the 2D cross section: 1200.0 m\n",
+    "z_total = fixed_thickness * n_depth  # total depth of the 2D cross section: 1200.0 m\n",
     "z_array = np.linspace(0, z_total, num=n_depth)\n",
     "\n",
     "original_2D_profile = np.zeros((n_depth, n_profile))  # rows: depth; columns: 1D profiles along cross section\n",
@@ -690,12 +692,12 @@
     "        being different depths, and columns being different 1D Vs profiles\n",
     "        (along the horizontal location).\n",
     "    depth_array : numpy.ndarray\n",
-    "        An array of layer depths. Its length should be the same as the number of \n",
+    "        An array of layer depths. Its length should be the same as the number of\n",
     "        rows of ``Vs_data``.\n",
     "    latitude_array : numpy.ndarray\n",
     "        The array of latitude values. Its length should be the same as the number\n",
     "        of columns of ``Vs_data``.\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    fig : matplotlib.figure.Figure\n",
@@ -704,8 +706,8 @@
     "        Axes object\n",
     "    \"\"\"\n",
     "    n_depth, n_profile = Vs_data.shape\n",
-    "    assert(len(latitude_array) == n_profile)\n",
-    "    assert(len(depth_array) == n_depth)\n",
+    "    assert len(latitude_array) == n_profile\n",
+    "    assert len(depth_array) == n_depth\n",
     "\n",
     "    X = np.zeros((n_profile, n_depth))\n",
     "    Y = np.zeros((n_profile, n_depth))\n",
@@ -718,7 +720,7 @@
     "        # END FOR\n",
     "    # END FOR\n",
     "\n",
-    "    #------------ Step 3: Plotting --------------------------------------\n",
+    "    # ------------ Step 3: Plotting --------------------------------------\n",
     "    fig = plt.figure(dpi=120)\n",
     "    ax = plt.axes()\n",
     "    hcon = plt.contourf(Y, X, Z, 80)\n",
@@ -758,8 +760,18 @@
     }
    ],
    "source": [
-    "fig, ax = plot_2D_profile(Vs_data=original_2D_profile, depth_array=z_array, latitude_array=lat_array)\n",
-    "ax.plot(lat_array, z1_contour, lw=2.0, clip_on=False, color='brown', ls='--', label='$z_1$ contour');\n",
+    "fig, ax = plot_2D_profile(\n",
+    "    Vs_data=original_2D_profile, depth_array=z_array, latitude_array=lat_array\n",
+    ")\n",
+    "ax.plot(\n",
+    "    lat_array,\n",
+    "    z1_contour,\n",
+    "    lw=2.0,\n",
+    "    clip_on=False,\n",
+    "    color='brown',\n",
+    "    ls='--',\n",
+    "    label='$z_1$ contour',\n",
+    ")\n",
     "ax.legend(loc='upper right');"
    ]
   },
@@ -819,15 +831,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def replace_2D_profile(original_2D_profile, vs30_contour, z1_contour, stochastic=False):\n",
+    "def replace_2D_profile(\n",
+    "        original_2D_profile, vs30_contour, z1_contour, stochastic=False\n",
+    "):\n",
     "    \"\"\"\n",
     "    Replace Vs values in ``original_2D_profile`` (above z1) with SVM-generated Vs values.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    original_2D_profile : numpy.ndarray\n",
     "        Vs data of the 2D profile. It should be a 2D numpy array, with its rows\n",
-    "        being different depths, and columns being different 1D Vs profiles \n",
+    "        being different depths, and columns being different 1D Vs profiles\n",
     "        (along the horizontal location).\n",
     "    vs30_contour : numpy.ndarray\n",
     "        The contour of Vs30 values along the horizontal location. It should be\n",
@@ -836,21 +850,21 @@
     "        The contour of z1 values along the horizontal location. It should be\n",
     "        a 1D numpy array.\n",
     "    stochastic : bool\n",
-    "        Whether to use stochastic SVM profiles to replace the original 2D \n",
+    "        Whether to use stochastic SVM profiles to replace the original 2D\n",
     "        profile. (Otherwise, use the base SVM profiles.)\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    new_2D_profile : numpy.array\n",
     "        The new 2D profile. It should have the same shape as ``original_2D_profile``.\n",
     "    \"\"\"\n",
     "    import PySeismoSoil.helper_site_response as sr\n",
-    "    \n",
+    "\n",
     "    new_2D_profile = np.zeros((n_depth, n_profile))\n",
     "    for j in range(n_profile):\n",
     "        vs30 = vs30_contour[j]\n",
     "        z1 = z1_contour[j]\n",
-    "        \n",
+    "\n",
     "        if vs30 >= 1000:  # rock site: no replacement needed\n",
     "            new_2D_profile[:, j] = original_2D_profile[:, j]\n",
     "        else:  # soil site: replace original Vs with SVM-generated Vs\n",
@@ -858,15 +872,19 @@
     "                z1 = sr.calc_z1_from_Vs30(vs30_contour[j])  # infer z1 from Vs30\n",
     "\n",
     "            svm = SVM(vs30, z1=z1)  # an `SVM` object\n",
-    "            svm_profile = svm.get_discretized_profile(fixed_thk=fixed_thickness)  # a `Vs_Profile` object\n",
+    "            svm_profile = svm.get_discretized_profile(\n",
+    "                fixed_thk=fixed_thickness\n",
+    "            )  # a `Vs_Profile` object\n",
     "            vs_matrix = svm_profile.vs_profile  # a 2D numpy array (\"matrix\") with 5 columns\n",
     "            svm_vs_values = vs_matrix[:, 1]  # extract the 1st column\n",
-    "            \n",
+    "\n",
     "            original_Vs = original_2D_profile[:, j]\n",
-    "            new_2D_profile[:, j] = replace_1D_profile(original_Vs, svm_vs_values, int(z1 / fixed_thickness))\n",
+    "            new_2D_profile[:, j] = replace_1D_profile(\n",
+    "                original_Vs, svm_vs_values, int(z1 / fixed_thickness)\n",
+    "            )\n",
     "        # END IF\n",
     "    # END FOR\n",
-    "    \n",
+    "\n",
     "    return new_2D_profile"
    ]
   },
@@ -880,26 +898,26 @@
     "    \"\"\"\n",
     "    Replace the content of ``original_profile`` with that of ``svm_profile``,\n",
     "    from the ground surface (index 0) down to ``z1_index``.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    original_profile : numpy.ndarray\n",
     "        1D numpy array of original Vs values to be replaced\n",
     "    new_profile : numpy.ndarray\n",
-    "        1D numpy array of Vs values generated by the SVM. Its length \n",
+    "        1D numpy array of Vs values generated by the SVM. Its length\n",
     "        needs to be no shorter than ``z1_index``.\n",
     "    z1_index : int\n",
     "        The 0th to the ``z1_index``-th elements of ``original_profile``\n",
-    "        will be replaced with those from the ``svm_profile``. And the \n",
+    "        will be replaced with those from the ``svm_profile``. And the\n",
     "        elements beyond ``z1_index`` in the ``original_profile`` will\n",
     "        remain unchanged.\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    new_profile : numpy.ndarray\n",
     "        The new Vs values.\n",
     "    \"\"\"\n",
-    "    assert(len(svm_profile) >= z1_index)\n",
+    "    assert len(svm_profile) >= z1_index\n",
     "    new_profile = original_profile.copy()\n",
     "    new_profile[:z1_index] = svm_profile[:z1_index]\n",
     "    return new_profile"
@@ -918,7 +936,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_2D_profile = replace_2D_profile(original_2D_profile, vs30_contour, z1_contour)"
+    "new_2D_profile = replace_2D_profile(\n",
+    "    original_2D_profile, vs30_contour, z1_contour\n",
+    ")"
    ]
   },
   {
@@ -947,9 +967,26 @@
     }
    ],
    "source": [
-    "fig, ax = plot_2D_profile(Vs_data=new_2D_profile, depth_array=z_array, latitude_array=lat_array)\n",
-    "ax.plot(lat_array, z1_contour, lw=2.0, clip_on=False, color='brown', ls='--', label='$z_1$ contour')\n",
-    "ax.plot(lat_array, vs30_contour, lw=2.0, color='white', ls='--', label='$V_{S30}$ contour')\n",
+    "fig, ax = plot_2D_profile(\n",
+    "    Vs_data=new_2D_profile, depth_array=z_array, latitude_array=lat_array\n",
+    ")\n",
+    "ax.plot(\n",
+    "    lat_array,\n",
+    "    z1_contour,\n",
+    "    lw=2.0,\n",
+    "    clip_on=False,\n",
+    "    color='brown',\n",
+    "    ls='--',\n",
+    "    label='$z_1$ contour',\n",
+    ")\n",
+    "ax.plot(\n",
+    "    lat_array,\n",
+    "    vs30_contour,\n",
+    "    lw=2.0,\n",
+    "    color='white',\n",
+    "    ls='--',\n",
+    "    label='$V_{S30}$ contour',\n",
+    ")\n",
     "ax.legend(loc='upper right');"
    ]
   }
