--- a/examples/Demo_07_Site_Factors.ipynb
+++ b/examples/Demo_07_Site_Factors.ipynb
@@ -88,7 +88,9 @@
    "source": [
     "method = 'nl_hh'  # the other option: 'eq_hh' --- results calculated by the equivalent linear method (not recommended)\n",
     "use_Fourier = True  # if True, Fourier-based factors; if False, get response-spectra-based factors\n",
-    "ampl_factor = site_factors.get_amplification(method=method, Fourier=use_Fourier, show_interp_plots=True)"
+    "ampl_factor = site_factors.get_amplification(\n",
+    "    method=method, Fourier=use_Fourier, show_interp_plots=True\n",
+    ")"
    ]
   },
   {
@@ -181,7 +183,9 @@
    ],
    "source": [
     "method = 'eq_hh'  # currently, the only option is 'eq_hh'\n",
-    "phase_factor = site_factors.get_phase_shift(method=method, show_interp_plots=True)"
+    "phase_factor = site_factors.get_phase_shift(\n",
+    "    method=method, show_interp_plots=True\n",
+    ")"
    ]
   },
   {
