--- a/examples/Pipeline_01_Site_Effects_Adjustments.ipynb
+++ b/examples/Pipeline_01_Site_Effects_Adjustments.ipynb
@@ -52,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gm = Ground_Motion('../tests/files/sample_accel.txt', unit='cm/s/s', motion_type='accel')"
+    "gm = Ground_Motion(\n",
+    "    '../tests/files/sample_accel.txt', unit='cm/s/s', motion_type='accel'\n",
+    ")"
    ]
   },
   {
@@ -123,11 +125,11 @@
    "outputs": [],
    "source": [
     "data = np.array([\n",
-    "    [10,  425, 1.961, 1800, 1   ],\n",
-    "    [20,  538, 1.549, 1800, 2   ],\n",
-    "    [70,  650, 1.282, 1800, 3   ],\n",
-    "    [100, 800, 1.042, 2000, 4   ],\n",
-    "    [0,  1000, 0.883, 2000, 0   ],\n",
+    "    [10, 425, 1.961, 1800, 1],\n",
+    "    [20, 538, 1.549, 1800, 2],\n",
+    "    [70, 650, 1.282, 1800, 3],\n",
+    "    [100, 800, 1.042, 2000, 4],\n",
+    "    [0, 1000, 0.883, 2000, 0],\n",
     "])\n",
     "vs_prof = Vs_Profile(data, damping_unit='%', density_unit='kg/m^3')"
    ]
@@ -195,8 +197,8 @@
     }
    ],
    "source": [
-    "%%time \n",
-    "gm_1 = gm.deconvolve(vs_prof, boundary='elastic', show_fig=True) # use 'elastic' because we want rock outcrop motion"
+    "%%time\n",
+    "gm_1 = gm.deconvolve(vs_prof, boundary='elastic', show_fig=True)  # use 'elastic' because we want rock outcrop motion"
    ]
   },
   {
