--- a/examples/Pipeline_02_HH_Calibration.ipynb
+++ b/examples/Pipeline_02_HH_Calibration.ipynb
@@ -563,7 +563,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hh_c_4 = HH_Calibration(vs_profile, GGmax_curves=ggmax_curves, Tmax_profile=Tau_max_profile)"
+    "hh_c_4 = HH_Calibration(\n",
+    "    vs_profile, GGmax_curves=ggmax_curves, Tmax_profile=Tau_max_profile\n",
+    ")"
    ]
   },
   {
