--- a/examples/Pipeline_04_Equivalent_Linear_Method.ipynb
+++ b/examples/Pipeline_04_Equivalent_Linear_Method.ipynb
@@ -15,7 +15,11 @@
    "source": [
     "from PySeismoSoil.class_Vs_profile import Vs_Profile\n",
     "from PySeismoSoil.class_ground_motion import Ground_Motion\n",
-    "from PySeismoSoil.class_curves import Multiple_GGmax_Curves, Multiple_Damping_Curves, Multiple_GGmax_Damping_Curves\n",
+    "from PySeismoSoil.class_curves import (\n",
+    "    Multiple_GGmax_Curves,\n",
+    "    Multiple_Damping_Curves,\n",
+    "    Multiple_GGmax_Damping_Curves,\n",
+    ")\n",
     "from PySeismoSoil.class_hh_calibration import HH_Calibration\n",
     "from PySeismoSoil.class_damping_calibration import Damping_Calibration\n",
     "from PySeismoSoil.class_simulation import Equiv_Linear_Simulation"
@@ -196,7 +200,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggmax_and_damping_curves = Multiple_GGmax_Damping_Curves(mgc_and_mdc=(ggmax_curves, damping_curves))"
+    "ggmax_and_damping_curves = Multiple_GGmax_Damping_Curves(\n",
+    "    mgc_and_mdc=(ggmax_curves, damping_curves)\n",
+    ")"
    ]
   },
   {
@@ -212,7 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eql_sim = Equiv_Linear_Simulation(vs_profile, input_accel, ggmax_and_damping_curves, boundary='elastic')"
+    "eql_sim = Equiv_Linear_Simulation(\n",
+    "    vs_profile, input_accel, ggmax_and_damping_curves, boundary='elastic'\n",
+    ")"
    ]
   },
   {
