--- a/examples/Pipeline_05_Nonlinear_Method.ipynb
+++ b/examples/Pipeline_05_Nonlinear_Method.ipynb
@@ -180,7 +180,7 @@
     "d_c = Damping_Calibration(vs_profile)\n",
     "hh_x_param = d_c.get_HH_x_param(\n",
     "    parallel=False,  # set `parallel` to `True` to use multiple CPU cores\n",
-    "    pop_size=200, \n",
+    "    pop_size=200,\n",
     "    n_gen=100,  # pop_size and n_gen control the speed and accuracy of the fit\n",
     "    show_fig=True,\n",
     ")"
@@ -199,7 +199,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nl_sim = Nonlinear_Simulation(vs_profile, input_accel, G_param=hh_g_param, xi_param=hh_x_param, boundary='elastic')"
+    "nl_sim = Nonlinear_Simulation(\n",
+    "    vs_profile,\n",
+    "    input_accel,\n",
+    "    G_param=hh_g_param,\n",
+    "    xi_param=hh_x_param,\n",
+    "    boundary='elastic',\n",
+    ")"
    ]
   },
   {
@@ -256,8 +262,8 @@
    ],
    "source": [
     "sim_results = nl_sim.run(\n",
-    "    show_fig=True, \n",
-    "    save_txt=False, \n",
+    "    show_fig=True,\n",
+    "    save_txt=False,\n",
     "    remove_sim_dir=True,  # flip `save_txt` and `remove_sim_dir` to keep result as text files\n",
     ")"
    ]
