--- a/examples/Pipeline_06_Batch_Simulation.ipynb
+++ b/examples/Pipeline_06_Batch_Simulation.ipynb
@@ -17,7 +17,11 @@
     "from PySeismoSoil.class_Vs_profile import Vs_Profile\n",
     "from PySeismoSoil.class_curves import Multiple_GGmax_Damping_Curves\n",
     "from PySeismoSoil.class_parameters import HH_Param_Multi_Layer\n",
-    "from PySeismoSoil.class_simulation import Linear_Simulation, Equiv_Linear_Simulation, Nonlinear_Simulation\n",
+    "from PySeismoSoil.class_simulation import (\n",
+    "    Linear_Simulation,\n",
+    "    Equiv_Linear_Simulation,\n",
+    "    Nonlinear_Simulation,\n",
+    ")\n",
     "from PySeismoSoil.class_batch_simulation import Batch_Simulation"
    ]
   },
@@ -100,7 +104,9 @@
     }
    ],
    "source": [
-    "lin_results = batch_lin_sim.run(parallel=True, n_cores=2, options=dict(every_layer=False, show_fig=True))"
+    "lin_results = batch_lin_sim.run(\n",
+    "    parallel=True, n_cores=2, options=dict(every_layer=False, show_fig=True)\n",
+    ")"
    ]
   },
   {
@@ -137,7 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curves_1 = Multiple_GGmax_Damping_Curves(data='../tests/files/curve_FKSH14.txt')\n",
+    "curves_1 = Multiple_GGmax_Damping_Curves(\n",
+    "    data='../tests/files/curve_FKSH14.txt'\n",
+    ")\n",
     "curves_2 = Multiple_GGmax_Damping_Curves(data='../tests/files/curve_P001.txt')"
    ]
   },
@@ -154,8 +162,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equiv_sim_1 = Equiv_Linear_Simulation(profile_1, accel_in, curves_1, boundary='elastic')\n",
-    "equiv_sim_2 = Equiv_Linear_Simulation(profile_2, accel_in, curves_2, boundary='elastic')"
+    "equiv_sim_1 = Equiv_Linear_Simulation(\n",
+    "    profile_1, accel_in, curves_1, boundary='elastic'\n",
+    ")\n",
+    "equiv_sim_2 = Equiv_Linear_Simulation(\n",
+    "    profile_2, accel_in, curves_2, boundary='elastic'\n",
+    ")"
    ]
   },
   {
@@ -195,7 +207,9 @@
     }
    ],
    "source": [
-    "equiv_results = batch_equiv_sim.run(parallel=True, n_cores=2, options=dict(verbose=True, show_fig=False));"
+    "equiv_results = batch_equiv_sim.run(\n",
+    "    parallel=True, n_cores=2, options=dict(verbose=True, show_fig=False)\n",
+    ");"
    ]
   },
   {
@@ -259,8 +273,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nonl_sim_1 = Nonlinear_Simulation(profile_1, accel_in, G_param=hh_g_param_1, xi_param=hh_x_param_1, boundary='elastic')\n",
-    "nonl_sim_2 = Nonlinear_Simulation(profile_2, accel_in, G_param=hh_g_param_2, xi_param=hh_x_param_2, boundary='rigid')"
+    "nonl_sim_1 = Nonlinear_Simulation(\n",
+    "    profile_1,\n",
+    "    accel_in,\n",
+    "    G_param=hh_g_param_1,\n",
+    "    xi_param=hh_x_param_1,\n",
+    "    boundary='elastic',\n",
+    ")\n",
+    "nonl_sim_2 = Nonlinear_Simulation(\n",
+    "    profile_2,\n",
+    "    accel_in,\n",
+    "    G_param=hh_g_param_2,\n",
+    "    xi_param=hh_x_param_2,\n",
+    "    boundary='rigid',\n",
+    ")"
    ]
   },
   {
@@ -307,7 +333,9 @@
    ],
    "source": [
     "nonl_results = batch_nonl_sim.run(\n",
-    "    parallel=True, n_cores=2, options=dict(remove_sim_dir=True, verbose=True, show_fig=False),\n",
+    "    parallel=True,\n",
+    "    n_cores=2,\n",
+    "    options=dict(remove_sim_dir=True, verbose=True, show_fig=False),\n",
     ")"
    ]
   },
